--- a/dispatch/Dockerfile
+++ b/dispatch/Dockerfile
@@ -1,4 +1,4 @@
-FROM golang:1.17
+FROM golang:1.22
 
 WORKDIR /go/src/app
 
@@ -7,4 +7,4 @@ COPY *.go .
 RUN go mod init dispatch && go get
 RUN go install
 
-CMD dispatch
+CMD ["./dispatch"]
