--- a/shipping/Dockerfile
+++ b/shipping/Dockerfile
@@ -1,30 +1,19 @@
-#
-# Build
-#
 FROM debian:10 AS build
 
-RUN apt-get update && apt-get -y install maven
+# Install dependencies
+RUN apt-get update && apt-get install -y curl tar
+
+# Set Maven version
+ENV MAVEN_VERSION=3.9.6
+
+# Download and extract Maven manually
+RUN curl -fsSL https://downloads.apache.org/maven/maven-3/${MAVEN_VERSION}/binaries/apache-maven-${MAVEN_VERSION}-bin.tar.gz \
+  | tar -xz -C /opt/ && \
+  ln -s /opt/apache-maven-${MAVEN_VERSION} /opt/maven
+
+# Add Maven to PATH
+ENV PATH="/opt/maven/bin:$PATH"
 
 WORKDIR /opt/shipping
 
-COPY pom.xml /opt/shipping/
-RUN mvn dependency:resolve
-COPY src /opt/shipping/src/
-RUN mvn package
-
-#
-# Run
-#
-FROM openjdk:8-jdk
-
-EXPOSE 8080
-
-WORKDIR /opt/shipping
-
-ENV CART_ENDPOINT=cart:8080
-ENV DB_HOST=mysql
-
-COPY --from=build /opt/shipping/target/shipping-1.0.jar shipping.jar
-
-CMD [ "java", "-Xmn256m", "-Xmx768m", "-jar", "shipping.jar" ]
-
+# Rest of your commands below...
