--- a/dispatch/Dockerfile
+++ b/dispatch/Dockerfile
@@ -1,15 +1,24 @@
 # Use a newer Go version (1.23 or later) to match your current Go version
 FROM golang:1.23
 
+# Set environment variable for Go modules
+ENV GO111MODULE=on
+
+# Set the working directory
 WORKDIR /go/src/app
 
+# Copy your Go files into the image
 COPY *.go .
 
 # Initialize Go modules and fetch dependencies
-RUN go mod init dispatch && go get
+RUN go mod init dispatch && go mod tidy
 
-# Install the application
-RUN go install
+# Build the binary and place it in the working directory
+RUN go build -o dispatch
 
-# Command to run the application
+# Expose the port your app uses (optional but recommended)
+EXPOSE 8080
+
+# Run the compiled binary
 CMD ["./dispatch"]
+
