--- a/web/default.conf.template
+++ b/web/default.conf.template
@@ -1,17 +1,12 @@
-# Instana tracing
+# Instana tracing (optional — only loaded if tracing is enabled via entrypoint.sh)
 opentracing_load_tracer /usr/local/lib/libinstana_sensor.so /etc/instana-config.json;
 opentracing_propagate_context;
 
 server {
-    listen       8080;
+    listen       80;
     server_name  localhost;
 
     proxy_http_version 1.1;
-
-    #charset koi8-r;
-    #access_log  /var/log/nginx/host.access.log  main;
-    #error_log /dev/stdout debug;
-    #rewrite_log on;
 
     location / {
         root   /usr/share/nginx/html;
@@ -25,37 +20,10 @@ server {
         try_files $uri /images/placeholder.png;
     }
 
-    #error_page  404              /404.html;
-
-    # redirect server error pages to the static page /50x.html
-    #
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
         root   /usr/share/nginx/html;
     }
-
-    # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-    #
-    #location ~ \.php$ {
-    #    proxy_pass   http://127.0.0.1;
-    #}
-
-    # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-    #
-    #location ~ \.php$ {
-    #    root           html;
-    #    fastcgi_pass   127.0.0.1:9000;
-    #    fastcgi_index  index.php;
-    #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-    #    include        fastcgi_params;
-    #}
-
-    # deny access to .htaccess files, if Apache's document root
-    # concurs with nginx's one
-    #
-    #location ~ /\.ht {
-    #    deny  all;
-    #}
 
     location /api/catalogue/ {
         proxy_pass http://${CATALOGUE_HOST}:8080/;
